--- a/css/style.css
+++ b/css/style.css
@@ -587,3 +587,11 @@ body {
   font-size: 29px;
   color: rgb(62, 68, 250);
  }
+
+ .kakao-ad-area1{
+  width: 100%;
+ }
+
+ .kakao-ad-area2{
+  width: 100%;
+ }
