--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,10 @@ body {
   
   .file-upload-input {
     position: absolute;
-    margin: 0;
+    margin-top: 10px;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     outline: none;
     opacity: 0;
     cursor: pointer;
