--- a/css/style.css
+++ b/css/style.css
@@ -588,10 +588,10 @@ body {
   color: rgb(62, 68, 250);
  }
 
- .kakao-ad-area1{
+ .kakao_ad_area1{
   width: 764px;
  }
 
- .kakao-ad-area2{
+ .kakao_ad_area2{
   width: 764px;
  }
