--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
   
   .file-upload-input {
     position: absolute;
-    margin-top: 10px;
+    margin: auto;
     padding: 0;
     width: 100%;
     height: 100%;
